--- a/views/index.njk
+++ b/views/index.njk
@@ -1,1 +1,8 @@
 <h1>This should be changed in the first PR</h1>
+
+<ul>
+  {% for game in games %}
+    <li>{{ game.name }}
+    </li>
+  {% endfor %}
+</ul>
